Works on UI Changes migration delete unused activities, layouts & drawables code tidy up

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,13 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".LandingPage"
+            android:name=".IkanInput"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".NelayanInput"
+            android:exported="false" />
+        <activity
+            android:name=".LandingPage"
             android:exported="false" />
         <activity
             android:name=".WeightInput"
